# pawn-templates

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  bintray.json  makefile  pawn.json  templates.inc  test.pwn
src/: lib.rs  plugin.rs
test/: samp.json
